# tree-sitter-dml

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  dml_grammar.txt  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/: setup.py
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dml/: __init__.py  binding.c  binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDml/: dml.h
bindings/swift/TreeSitterDmlTests/: TreeSitterDmlTests.swift
examples/: parse_dml.py  sample.dml  sample_device.dml
src/: grammar.json  node-types.json  parser.c
